cfn-template/cfn.yml
Resources:
  tkyVpc77194ED5:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.1.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: SrcStack/tkyVpc
    Metadata:
      aws:cdk:path: SrcStack/tkyVpc/Resource
  tkySubnet6EB89102:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.1.1.0/24
      VpcId:
        Ref: tkyVpc77194ED5
      AvailabilityZone: ap-northeast-1a
      Tags:
        - Key: Name
          Value: SrcStack/tkySubnet
    Metadata:
      aws:cdk:path: SrcStack/tkySubnet/Subnet
  tkySubnetRouteTable2CB6C0F0:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: tkyVpc77194ED5
      Tags:
        - Key: Name
          Value: SrcStack/tkySubnet
    Metadata:
      aws:cdk:path: SrcStack/tkySubnet/RouteTable
  tkySubnetRouteTableAssociationD4FF3EDB:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: tkySubnetRouteTable2CB6C0F0
      SubnetId:
        Ref: tkySubnet6EB89102
    Metadata:
      aws:cdk:path: SrcStack/tkySubnet/RouteTableAssociation
  tkySubnettkySubnetRoute217AADB7:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: tkySubnetRouteTable2CB6C0F0
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: tkyIGW
    Metadata:
      aws:cdk:path: SrcStack/tkySubnet/tkySubnetRoute
  tkyIGW:
    Type: AWS::EC2::InternetGateway
    Metadata:
      aws:cdk:path: SrcStack/tkyIGW
  tkyIGwAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: tkyVpc77194ED5
      InternetGatewayId:
        Ref: tkyIGW
    Metadata:
      aws:cdk:path: SrcStack/tkyIGwAttach
  tkySecurityGroupEA4E4319:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: SrcStack/tkySecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: from 0.0.0.0/0:ALL ICMP
          FromPort: -1
          IpProtocol: icmp
          ToPort: -1
        - CidrIp: 0.0.0.0/0
          Description: from 0.0.0.0/0:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
        - CidrIp: 0.0.0.0/0
          Description: from 0.0.0.0/0:3389
          FromPort: 3389
          IpProtocol: tcp
          ToPort: 3389
      VpcId:
        Ref: tkyVpc77194ED5
    Metadata:
      aws:cdk:path: SrcStack/tkySecurityGroup/Resource
  tkyEc2a:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t3.micro
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet:
            - Fn::GetAtt:
                - tkySecurityGroupEA4E4319
                - GroupId
          SubnetId:
            Ref: tkySubnet6EB89102
    Metadata:
      aws:cdk:path: SrcStack/tkyEc2a
  tkyEc2b:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t3.micro
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet:
            - Fn::GetAtt:
                - tkySecurityGroupEA4E4319
                - GroupId
          SubnetId:
            Ref: tkySubnet6EB89102
    Metadata:
      aws:cdk:path: SrcStack/tkyEc2b
  tkyEc2c:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t3.micro
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet:
            - Fn::GetAtt:
                - tkySecurityGroupEA4E4319
                - GroupId
          SubnetId:
            Ref: tkySubnet6EB89102
    Metadata:
      aws:cdk:path: SrcStack/tkyEc2c
  tkyEc2d:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Ref: SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t3.micro
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet:
            - Fn::GetAtt:
                - tkySecurityGroupEA4E4319
                - GroupId
          SubnetId:
            Ref: tkySubnet6EB89102
    Metadata:
      aws:cdk:path: SrcStack/tkyEc2d
  tkyEc2e:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Ref: SsmParameterValueawsserviceamiwindowslatestWindowsServer2019JapaneseFullBaseC96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t3.micro
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet:
            - Fn::GetAtt:
                - tkySecurityGroupEA4E4319
                - GroupId
          SubnetId:
            Ref: tkySubnet6EB89102
    Metadata:
      aws:cdk:path: SrcStack/tkyEc2e
  tkyEc2f:
    Type: AWS::EC2::Instance
    Properties:
      ImageId:
        Ref: SsmParameterValueawsserviceamiwindowslatestWindowsServer2019JapaneseFullBaseC96584B6F00A464EAD1953AFF4B05118Parameter
      InstanceType: t3.micro
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: "0"
          GroupSet:
            - Fn::GetAtt:
                - tkySecurityGroupEA4E4319
                - GroupId
          SubnetId:
            Ref: tkySubnet6EB89102
    Metadata:
      aws:cdk:path: SrcStack/tkyEc2f
  CDKMetadata:
    Type: AWS::CDK::Metadata
    Properties:
      Analytics: v2:deflate64:H4sIAAAAAAAACl1QTW/CMAz9LbuHoE4TErehHhCnVS3iblwjAtSpEhuEqv73JYDotJOfn58/ngu7/LLFxzfc4gzb83xAH8gOjQCeTU3Ra0Ay5YErCNCRUMjJj0qvYkrPUYKiZO6vOBVaJ87zaPJgwk877HrMpV1Vmkb3TI+mCdVehbawv9DET9wqRo8O8si3OIMNp4uScg1CN7i/FryylSQXx45YTEOowcl9Hbz2jwX/iU2yAow0joZ9S/YU59civWaRvnOKzs2CsriObP2Mv4I/Bvk5AQAA
    Metadata:
      aws:cdk:path: SrcStack/CDKMetadata/Default
    Condition: CDKMetadataAvailable
Parameters:
  SsmParameterValueawsserviceamiamazonlinuxlatestamzn2amihvmx8664gp2C96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2
  SsmParameterValueawsserviceamiwindowslatestWindowsServer2019JapaneseFullBaseC96584B6F00A464EAD1953AFF4B05118Parameter:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-windows-latest/Windows_Server-2019-Japanese-Full-Base
Outputs:
  Ida:
    Value:
      Ref: tkyEc2a
  PublicIpa:
    Value:
      Fn::GetAtt:
        - tkyEc2a
        - PublicIp
  Idb:
    Value:
      Ref: tkyEc2b
  PublicIpb:
    Value:
      Fn::GetAtt:
        - tkyEc2b
        - PublicIp
  Idc:
    Value:
      Ref: tkyEc2c
  PublicIpc:
    Value:
      Fn::GetAtt:
        - tkyEc2c
        - PublicIp
  Idd:
    Value:
      Ref: tkyEc2d
  PublicIpd:
    Value:
      Fn::GetAtt:
        - tkyEc2d
        - PublicIp
  Ide:
    Value:
      Ref: tkyEc2e
  PublicIpe:
    Value:
      Fn::GetAtt:
        - tkyEc2e
        - PublicIp
  Idf:
    Value:
      Ref: tkyEc2f
  PublicIpf:
    Value:
      Fn::GetAtt:
        - tkyEc2f
        - PublicIp
Conditions:
  CDKMetadataAvailable:
    Fn::Or:
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - af-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-northeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-1
          - Fn::Equals:
              - Ref: AWS::Region
              - ap-southeast-2
          - Fn::Equals:
              - Ref: AWS::Region
              - ca-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - cn-northwest-1
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-central-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-north-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-2
          - Fn::Equals:
              - Ref: AWS::Region
              - eu-west-3
          - Fn::Equals:
              - Ref: AWS::Region
              - me-south-1
          - Fn::Equals:
              - Ref: AWS::Region
              - sa-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-east-2
      - Fn::Or:
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-1
          - Fn::Equals:
              - Ref: AWS::Region
              - us-west-2
